@@ -1,3 +1,8 @@
+import java.nio.file.Files
+import java.nio.file.Paths
+import java.util.zip.ZipEntry
+import java.util.zip.ZipOutputStream
+
 buildscript {
     repositories {
         maven {
@@ -7,34 +12,41 @@ buildscript {
             url = "https://plugins.gradle.org/m2/"
         }
         maven {
+            url = "http://jenkins.usrv.eu:8081/nexus/content/groups/public/"
+        }
+        maven {
             url = "https://jitpack.io/"
         }
         mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath "net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT"
+        classpath "net.minecraftforge.gradle:ForgeGradle:1.2.13"
+        classpath "de.undercouch:gradle-download-task:5.3.1"
     }
 }
 
-apply plugin: "net.minecraftforge.gradle.forge"
+apply plugin: "forge"
 apply plugin: "eclipse"
 apply plugin: "maven-publish"
+apply plugin: "de.undercouch.download"
 
 repositories {
-    mavenCentral()
     jcenter()
     flatDir {
         dirs "libs"
     }
     maven {
-        url = "https://maven.blamejared.com/"
+        url = "https://chickenbones.net/maven/"
     }
     maven {
-        url = "https://dvs1.progwml6.com/files/maven/"
+        url = "https://maven.mcmoddev.com/"
     }
     maven {
-        url = "https://maven.amadornes.com/"
+        url = "http://jenkins.usrv.eu:8081/nexus/content/groups/public/"
+    }
+    maven {
+        url = "https://maven.covers1624.net/"
     }
     maven {
         url = "https://maven.ic2.player.to/"
@@ -43,41 +55,28 @@ repositories {
         url = "https://maven.tterrag.com/"
     }
     maven {
-        url = "https://maven.modmuss50.me/"
+        url = "https://maven.k-4u.nl/"
     }
     maven {
-        url = "https://maven.blamejared.com/"
+        url = "https://dvs1.progwml6.com/files/maven/"
     }
     maven {
-        url = "https://maven.shadowfacts.net/"
-    }
-    maven {
-        url = "https://maven.mcmoddev.com/"
-    }
-    maven {
-        url = "https://maven.thiakil.com/"
-    }
-    maven {
-        url = "https://www.mod-buildcraft.com/maven/"
-    }
-    maven {
-        url = "https://maven.cleanroommc.com/"
+        url = "https://jitpack.io/"
     }
     maven {
         url = "https://cursemaven.com/"
+    }
+    maven {
+        url = "https://api.modrinth.com/maven/"
     }
     maven {
         url = "https://modmaven.dev/"
     }
 }
 
-sourceSets {
-    main
-}
-
-version = "1.12.2-3.0.0.0"
-group = "thelm.jaopca.singularities"
-archivesBaseName = "JAOPCASingularities"
+version = "W.0.1.2"
+group = "thelm.jaopca"
+archivesBaseName = "JAOPCA-1.7.10"
 
 sourceCompatibility = targetCompatibility = "1.8"
 compileJava {
@@ -86,69 +85,210 @@ compileJava {
 compileJava.options.encoding = "UTF-8"
 
 minecraft {
-    version = "1.12.2-14.23.5.2847"
-    runDir = "run"
-    mappings = "stable_39"
-    def commonJvmArgs = [
-        "-Xmn768m", "-XX:+DisableExplicitGC", "-XX:+UseConcMarkSweepGC",
-        "-XX:+UseParNewGC", "-XX:+UseNUMA", "-XX:+CMSParallelRemarkEnabled",
-        "-XX:MaxTenuringThreshold=15", "-XX:MaxGCPauseMillis=30", "-XX:GCPauseIntervalMillis=150",
-        "-XX:+UseAdaptiveGCBoundary", "-XX:-UseGCOverheadLimit", "-XX:+UseBiasedLocking",
-        "-XX:SurvivorRatio=8", "-XX:TargetSurvivorRatio=90", "-XX:MaxTenuringThreshold=15",
-        "-XX:+UseFastAccessorMethods", "-XX:+UseCompressedOops", "-XX:+OptimizeStringConcat",
-        "-XX:+AggressiveOpts", "-XX:ReservedCodeCacheSize=2048m", "-XX:+UseCodeCacheFlushing",
-        "-XX:SoftRefLRUPolicyMSPerMB=10000", "-XX:ParallelGCThreads=10", "-Dmixin.hotSwap=true",
-        "-Dmixin.checks.interfaces=true"
-    ]
-    clientJvmArgs.add("-Xmx7G")
-    clientJvmArgs.addAll(commonJvmArgs)
-    clientRunArgs.add("--username=Dev")
-    serverJvmArgs.add("-Xmx3G")
-    serverJvmArgs.addAll(commonJvmArgs)
-    makeObfSourceJar = false
+    version = "1.7.10-10.13.4.1614-1.7.10"
 }
 
 dependencies {
-    deobfCompile "mezz.jei:jei_1.12.2:4.16.1.302"
-    deobfCompile "MCMultiPart2:MCMultiPart:2.5.3"
-    deobfCompile "blusunrize:ImmersiveEngineering:0.12-88-506"
-    deobfCompile "codechicken:CodeChickenLib:1.12.2-3.2.3.358:universal"
-    implementation "net.shadowfacts:Forgelin:1.8.4"
-    deobfCompile "CraftTweaker2:CraftTweaker2-API:4.1.20.675"
-    deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.675"
-    deobfCompile("morph.avaritia:Avaritia:1.12.2-3.3.0.33:universal") {
+    implementation "com.gtnewhorizon:gtnhmixins:2.1.12"
+
+    implementation "com.github.GTNewHorizons:CodeChickenCore:1.1.11:dev"
+    implementation "com.github.GTNewHorizons:CodeChickenLib:1.1.7:dev"
+    implementation "com.github.GTNewHorizons:NotEnoughItems:2.3.27-GTNH:dev"
+    implementation "com.azanor.baubles:Baubles:1.0.1.10:deobf"
+    implementation "com.azanor:Thaumcraft:1.7.10-4.2.3.5:deobf"
+    implementation "com.github.GTNewHorizons:ForgeMultipart:1.3.1:dev"
+
+    implementation "curse.maven:jaopca-266936:4427585"
+
+    implementation "curse.maven:cofh-core-69162:2388751"
+    implementation "curse.maven:thermal-foundation-222880:2388753"
+    implementation "curse.maven:thermal-expansion-69163:2388759"
+    implementation "curse.maven:thermal-dynamics-227443:2388757"
+    implementation "curse.maven:immersive-engineering-231951:2299020"
+
+    implementation deobfCurse("avaritia-233785:2519595")
+
+    implementation "com.github.GTNewHorizons:NotEnoughIds:1.4.6:dev"
+    implementation("com.github.GTNewHorizons:TCNEIAdditions:1.1.1.8:dev") {
         transitive = false
     }
+    implementation "com.github.GTNewHorizons:Mixingasm:v0.2.4:dev"
 
-    deobfCompile "curse.maven:wrapup-275153:2486198"
-    deobfCompile "curse.maven:jaopca-266936:4292025"
+    implementation deobfCurse("crafttweaker-239197:2838720")
+    implementation deobfCurse("abyssalcraft-53686:2311135")
 
-    deobfCompile "curse.maven:baubles-227083:2518667"
-    deobfCompile "curse.maven:thaumcraft-223628:2629023"
-    deobfCompile "curse.maven:thaumic-jei-285492:2705304"
-    deobfCompile "curse.maven:redstone-flux-270789:2920436"
-    deobfCompile "curse.maven:cofh-core-69162:2920433"
-    deobfCompile "curse.maven:cofh-world-271384:2920434"
-    deobfCompile "curse.maven:thermal-foundation-222880:2926428"
-    deobfCompile "curse.maven:thermal-expansion-69163:2926431"
-    deobfCompile "curse.maven:thermal-dynamics-227443:2920505"
-    deobfCompile "curse.maven:abyssalcraft-53686:3425234"
-
-    deobfCompile "zone.rong:mixinbooter:7.0"
-    deobfCompile "curse.maven:jeid-296289:3581715"
-    deobfCompile "curse.maven:spark-361579:3245793"
-    deobfCompile "curse.maven:lolasm-460609:3834448"
+    implementation deobfCurse("fastcraft-242677:2522249")
+    implementation deobfCurse("nei-integration-225251:2282522")
+    implementation deobfCurse("thaumcraft-nei-plugin-225095:2241913")
 }
+
+def manifestAttributes = [
+        "Specification-Title": "JAOPCASingularities",
+        "Specification-Vendor": "thelm",
+        "Specification-Version": "W",
+        "Implementation-Title": "${archivesBaseName}",
+        "Implementation-Version": "${version}",
+        "Implementation-Vendor": "thelm"
+        //"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+]
 
 jar {
     manifest {
-        attributes([
-                "Specification-Title": "JAOPCASingularities",
-                "Specification-Vendor": "thelm",
-                "Specification-Version": "3",
-                "Implementation-Title": "${archivesBaseName}",
-                "Implementation-Version": "${version}",
-                "Implementation-Vendor": "thelm"
-        ],)
+        attributes(manifestAttributes)
     }
+}
+
+task devJar(type: Jar) {
+    from sourceSets.main.output
+    classifier = "dev"
+    manifest {
+        attributes(manifestAttributes)
+    }
+}
+
+artifacts {
+    archives devJar
+}
+
+def deobfCurse(String curseDep) {
+    return deobfMaven("https://www.cursemaven.com/", "curse.maven:${curseDep}")
+}
+
+def deobfModrinth(String modrinthDep) {
+    return deobfMaven("https://api.modrinth.com/maven/", "maven.modrinth:${modrinthDep}")
+}
+
+def deobfMaven(String repoURL, String mavenDep) {
+    if(!repoURL.endsWith("/")) {
+        repoURL += "/"
+    }
+    String[] parts = mavenDep.split(":")
+    parts[0] = parts[0].replace(".", "/")
+    String jarURL
+    if(parts.length > 3) {
+        jarURL = "${repoURL}${parts[0]}/${parts[1]}/${parts[2]}/${parts[1]}-${parts[2]}-${parts[3]}.jar"
+    }
+    else {
+        jarURL = "${repoURL}${parts[0]}/${parts[1]}/${parts[2]}/${parts[1]}-${parts[2]}.jar"
+    }
+    return deobf(jarURL)
+}
+
+def deobfMediafire(String mediafireDep) {
+    String fileName = mediafireDep
+    int lastSlash = fileName.lastIndexOf("/")
+    if(lastSlash > 0) {
+        fileName = fileName.substring(lastSlash+1)
+    }
+    if(fileName.endsWith(".jar") || fileName.endsWith(".litemod")) {
+        fileName = fileName.substring(0, fileName.lastIndexOf("."))
+    }
+    return deobf("https://thealiendrew.github.io/mediafire-direct/?dl=mediafire.com/file/${mediafireDep}", "com.mediafire/${fileName}")
+}
+
+def deobfDropbox(String dropboxDep) {
+    String fileName = dropboxDep
+    fileName = fileName.replace("%20", "-").replace("%", "")
+    int lastSlash = fileName.lastIndexOf("/")
+    if(lastSlash > 0) {
+        fileName = fileName.substring(lastSlash+1)
+    }
+    if(fileName.endsWith(".jar") || fileName.endsWith(".litemod")) {
+        fileName = fileName.substring(0, fileName.lastIndexOf("."))
+    }
+    return deobf("https://www.dropbox.com/s/${dropboxDep}?dl=1", "com.dropbox/${fileName}")
+}
+
+def deobfGithub(String repo, String dep) {
+    return deobf("https://github.com/${repo}/releases/download/${dep}")
+}
+
+def deobf(String sourceURL) {
+    try {
+        URL url = new URL(sourceURL)
+        String fileName = url.getFile()
+        int lastSlash = fileName.lastIndexOf("/")
+        if(lastSlash > 0) {
+            fileName = fileName.substring(lastSlash+1)
+        }
+        if(fileName.endsWith(".jar") || fileName.endsWith(".litemod")) {
+            fileName = fileName.substring(0, fileName.lastIndexOf("."))
+        }
+        String hostName = url.getHost()
+        if(hostName.startsWith("www.")) {
+            hostName = hostName.substring(4)
+        }
+        List parts = Arrays.asList(hostName.split("\\."))
+        Collections.reverse(parts)
+        hostName = String.join(".", parts)
+        return deobf(sourceURL, "${hostName}/${fileName}")
+    }
+    catch(Exception e) {
+        return deobf(sourceURL, "deobf/${sourceURL.hashCode()}")
+    }
+}
+
+def deobf(String sourceURL, String rawFileName) {
+    String bon2Version = "2.5.1"
+    String fileName = URLDecoder.decode(rawFileName, "UTF-8")
+    String cacheDir = "${project.gradle.gradleUserHomeDir}/caches"
+    String bon2Dir = "${cacheDir}/forge_gradle/deobf"
+    String bon2File = "${bon2Dir}/BON2-${bon2Version}.jar"
+    String obfFile = "${cacheDir}/modules-2/files-2.1/${fileName}.jar"
+    String deobfFile = "${cacheDir}/modules-2/files-2.1/${fileName}-deobf.jar"
+    if(file(deobfFile).exists()) {
+        return files(deobfFile)
+    }
+    String mappingsVer
+    String remoteMappings = "https://raw.githubusercontent.com/MinecraftForge/FML/1.7.10/conf/"
+    String id = "1614-1.7.10"
+    String mappingsZIP = "${cacheDir}/forge_gradle/maven_downloader/de/oceanlabs/mcp/mcp_snapshot_nodoc/${id}/mcp_snapshot_nodoc-${id}.zip"
+    zipMappings(mappingsZIP, remoteMappings, bon2Dir)
+    mappingsVer = "snapshot_${id}"
+    download.run {
+        src "http://jenkins.usrv.eu:8081/nexus/content/repositories/releases/com/github/parker8283/BON2/${bon2Version}-CUSTOM/BON2-${bon2Version}-CUSTOM-all.jar"
+        dest bon2File
+        quiet true
+        overwrite false
+    }
+    download.run {
+        src sourceURL
+        dest obfFile
+        quiet true
+        overwrite false
+    }
+    exec {
+        commandLine "java", "-jar", bon2File, "--inputJar", obfFile, "--outputJar", deobfFile, "--mcVer", "1.7.10", "--mappingsVer", mappingsVer, "--notch"
+        workingDir bon2Dir
+        standardOutput = new FileOutputStream("${deobfFile}.log")
+    }
+    return files(deobfFile)
+}
+
+def zipMappings(String zipPath, String url, String bon2Dir) {
+    File zipFile = new File(zipPath)
+    if(zipFile.exists()) {
+        return
+    }
+    String fieldsCache = "${bon2Dir}/data/fields.csv"
+    String methodsCache = "${bon2Dir}/data/methods.csv"
+    download.run {
+        src "${url}fields.csv"
+        dest fieldsCache
+        quiet true
+    }
+    download.run {
+        src "${url}methods.csv"
+        dest methodsCache
+        quiet true
+    }
+    zipFile.getParentFile().mkdirs()
+    ZipOutputStream zos = new ZipOutputStream(new FileOutputStream(zipFile))
+    zos.putNextEntry(new ZipEntry("fields.csv"))
+    Files.copy(Paths.get(fieldsCache), zos)
+    zos.closeEntry()
+    zos.putNextEntry(new ZipEntry("methods.csv"))
+    Files.copy(Paths.get(methodsCache), zos)
+    zos.closeEntry()
+    zos.close()
 }
